--- a/templates/response/index.html
+++ b/templates/response/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-{% load staticfiles%}
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="https://ravish1.s3.ap-south-1.amazonaws.com/index.js"></script>
+    <script src="{% static 'javascript/index.js' %}"></script>
+    <!--upload the js to s3 and add link
+    <script src=""></script>
+    -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
@@ -17,7 +20,7 @@
 <body style="background-color:#fbfbd6">
     <div class="container" style="margin-left:39%">
       <button style="display:inline-block;margin-top:25%;border-radius:50%" class="btn btn-light" onclick="record()">
-    <img src="https://ravish1.s3.ap-south-1.amazonaws.com/1.jpg" style="height:250px;width:250px;border-radius:50%" alt="mic button">
+    <img src={{url}} style="height:250px;width:250px;border-radius:50%" alt="mic button">
   </button>
   <br><br>
   <h3 style="margin-left:96px">Speak</h3>
